# Snackable-Content

./: README.md  package-lock.json  package.json  pyproject.toml  render.yaml  training_data.pkl
marketing-ai/: .gitignore  README.md  package-lock.json  package.json
marketing-ai/src/: App.js  FilePreview.js  MarketingAIInterface.js
output/: blog_post.md  linkedin_post.md  research.md  twitter_post.md
src/: app.py
src/marketing_ai/: crew.py  main.py  requirements.txt
src/marketing_ai/config/: agents.yaml  tasks.yaml
